vlib/v/parser/tests/fn_attributes_empty_err.vv
@[] fn tt() {
	println('text')
}
fn main() {
	tt()
}
